--- a/Client/src/components/componentCss/backgroundbuttons.css
+++ b/Client/src/components/componentCss/backgroundbuttons.css
@@ -50,3 +50,17 @@ h3 {
         padding-top: 10px; /* Optional: Adjust top padding for mobile */
     }
 }
+
+/* Default styles for the h3 element */
+.custom-h3 {
+    padding-left: 20px;  /* Adjust this value as needed */
+    padding-right: 20px; /* Adjust this value as needed */
+}
+
+/* Media queries for smaller screens */
+@media (max-width: 576px) { /* Adjust the breakpoint as needed */
+    .custom-h3 {
+        padding-left: 40px;  /* Increased left padding for mobile */
+        padding-right: 40px; /* Increased right padding for mobile */
+    }
+}
